test/compile_errors/stage1/obj/reify_type_for_exhaustive_enum_with_zero_fields.zig
const Tag = @Type(.{
    .Enum = .{
        .layout = .Auto,
        .tag_type = u1,
        .fields = &.{},
        .decls = &.{},
        .is_exhaustive = true,
    },
});
export fn entry() void {
    _ = @intToEnum(Tag, 0);
}

// @Type for exhaustive enum with zero fields
//
// tmp.zig:1:20: error: enums must have 1 or more fields
